--- a/pages/niños.html
+++ b/pages/niños.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!---css--->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
    <!---titulo--->
- <title>Los2Primos</title>
+ <title>Los2Primos - Niños</title>
+ <meta name="description" content="ropa para chicos">
+    <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria">
+    <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
  <!---bootstrap--->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
    <!---cabecera--->
@@ -48,7 +51,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     </div>
   </nav>
 </header>
-<h1 class="text-center">Pensado para <span style="color: red ">ellos</span></h1>
+<h1 class="text-center titulo_niños">Pensado para <span style="color: red ">ellos</span></h1>
   <section class="container d-flex flex-column justify-content-center aligin-items-center">
     <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
     <div class="row w-100 justify-content-center aligin-items-center mx-auto animate__animated animate__fadeInDownBig">
@@ -56,13 +59,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img src="../imagenes/camp.jpg" class="d-block w-100" alt="ropaniñas" width="500px" height="250px2">
+              <img src="../imagenes/camp.webp" class="d-block w-100" alt="ropaniños" width="500px" height="250px2">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img src="../imagenes/camp2.jpg" class="d-block w-100" alt="ropaniñas" width="500px" height="250px">
+              <img src="../imagenes/camp2.webp" class="d-block w-100" alt="ropaniños" width="500px" height="250px">
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/camp3.jpg" class="d-block w-100" alt="ropaniñas" width="500px" height="250px">
+              <img src="../imagenes/camp3.webp" class="d-block w-100" alt="ropaniños" width="500px" height="250px">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -82,13 +85,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../imagenes/pantalon.jpg" class="d-block w-100" alt="..." width="500px" height="250px2">>
+              <img src="../imagenes/pantalon.webp" class="d-block w-100" alt="ropa" width="500px" height="250px2">>
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/pantalon2.jpg" class="d-block w-100" alt="..." width="500px" height="250px2">>
+              <img src="../imagenes/pantalon2.webp" class="d-block w-100" alt="ropa" width="500px" height="250px2">>
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/pantalon4.jpg" class="d-block w-100" alt="..." width="500px" height="250px2">>
+              <img src="../imagenes/pantalon4.webp" class="d-block w-100" alt="ropa" width="500px" height="250px2">>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -108,13 +111,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../imagenes/boy.jpg" class="d-block w-100" alt="..." width="500px" height="250px2">
+              <img src="../imagenes/boy.jpg" class="d-block w-100" alt="moda" width="500px" height="250px2">
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/boy2.webp" class="d-block w-100" alt="..." width="500px" height="250px2">
+              <img src="../imagenes/boy2.webp" class="d-block w-100" alt="moda" width="500px" height="250px2">
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/boy3.jpeg" class="d-block w-100" alt="..." width="500px" height="250px2">
+              <img src="../imagenes/boy3.jpg" class="d-block w-100" alt="moda" width="500px" height="250px2">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -130,14 +133,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     </div>
     </section>
     <!---pie--->
-    <footer class=" pie container d-flex justify-content-center aligin-items-center">
-    <div class="row">
-        <div class="col-md-12">
-            <p class="fs-5 fw-bold fst-italic bg-light w-100 mt-2">Desde 2022</p>
-        </div>
-</div>
-       
-</footer>
+    <footer>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-whatsapp"></i>
+   </footer>
 <!---script bootstrap--->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
