--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!---css--->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../scss/estilos.css">
 
    <!---titulo--->
- <title>Los2Primos</title>
+ <title>Los2Primos - Nosotros</title>
+ <meta name="description" content="ropa para chicos">
+ <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos">
+ <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
 
  <link
  rel="stylesheet"
@@ -73,7 +76,7 @@
                 <img class="w-100 mx-auto rounded-4 mb-4 animate__animated animate__fadeInTopRight" src="../imagenes/fundadores.webp" alt="fundadores" width="300px" height="200px">
               </div> 
               <div class="col-md-6">
-                    <img class="w-100 mx-auto rounded-4 animate__animated animate__fadeInLeftBig" src="../imagenes/vendedores.jpg" alt="fundadores" >
+                    <img class="w-100 mx-auto rounded-4 animate__animated animate__fadeInLeftBig" src="../imagenes/vendedores.webp" alt="fundadores" >
                   </div> 
               <div class="col-md-6 mx-auto">
                <h2 class="mx-auto fs-4">Nuestrxs vendedorxs</h2>
@@ -82,15 +85,11 @@
               </div>
         </section>
         <!---pie--->
-        <footer class="container d-flex justify-content-center aligin-items-center">
-            <div class="row">
-                <div class="col-md-12">
-                    <p class="fs-5 fw-bold fst-italic bg-light w-100 mt-2">Desde 2022</p>
-                </div>
-        </div>
-        
-               
-        </footer>
+        <footer>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+       </footer>
         <!---script bootstrap--->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
