cambios en niñas y niños

--- a/pages/niños.html
+++ b/pages/niños.html
@@ -54,82 +54,33 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <h1 class="text-center titulo_niños">Pensado para <span style="color: red ">ellos</span></h1>
   <section class="container d-flex flex-column justify-content-center aligin-items-center">
     <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
-    <div class="row w-100 justify-content-center aligin-items-center mx-auto animate__animated animate__fadeInDownBig">
-      <div class=" w-50 animate__animated animate__fadeInDownBig">
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img src="../imagenes/camp.webp" class="d-block w-100" alt="ropaniños" width="500px" height="250px2">
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="../imagenes/camp2.webp" class="d-block w-100" alt="ropaniños" width="500px" height="250px">
-            </div>
-            <div class="carousel-item">
-              <img src="../imagenes/camp3.webp" class="d-block w-100" alt="ropaniños" width="500px" height="250px">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
+    <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+      <div class="col-4 mx-auto"><img src="../imagenes/camp.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
+      </div>
+      <div class="col-4 mx-auto"><img src="../imagenes/camp4.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
+      </div>
+      <div class="col-4 mx-auto"><img src="../imagenes/camp3.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
       </div>
     </section>
       <section class="container d-flex flex-column justify-content-center aligin-items-center">
-        <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
-      <div class="row w-50 justify-content-center aligin-items-center mx-auto animate__animated animate__fadeInLeftBig">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../imagenes/pantalon.webp" class="d-block w-100" alt="ropa" width="500px" height="250px2">>
-            </div>
-            <div class="carousel-item">
-              <img src="../imagenes/pantalon2.webp" class="d-block w-100" alt="ropa" width="500px" height="250px2">>
-            </div>
-            <div class="carousel-item">
-              <img src="../imagenes/pantalon4.webp" class="d-block w-100" alt="ropa" width="500px" height="250px2">>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+        <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
+      <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+        <div class="col-4 mx-auto"><img src="../imagenes/boy.jpg" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
         </div>
-      </div>
+        <div class="col-4 mx-auto"><img src="../imagenes/boy2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
+        </div>
+        <div class="col-4 mx-auto"><img src="../imagenes/boy3.jpg" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
+        </div>
     </section>
     <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__fadeInRightBig">
-      <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
-      <div class="row w-50 mx-auto animate__animated animate__fadeInUpBig">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../imagenes/boy.jpg" class="d-block w-100" alt="moda" width="500px" height="250px2">
-            </div>
-            <div class="carousel-item">
-              <img src="../imagenes/boy2.webp" class="d-block w-100" alt="moda" width="500px" height="250px2">
-            </div>
-            <div class="carousel-item">
-              <img src="../imagenes/boy3.jpg" class="d-block w-100" alt="moda" width="500px" height="250px2">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+      <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
+      <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+        <div class="col-4 mx-auto"><img src="../imagenes/pantalon.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
+    </div>
+        <div class="col-4 mx-auto"><img src="../imagenes/pantalon2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
         </div>
-      </div>
+        <div class="col-4 mx-auto"><img src="../imagenes/pantalon4.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
+        </div>
     </div>
     </section>
     <!---pie--->
