--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -58,10 +58,8 @@
         <article class="conteiner mx-auto">
              <div class="col-md-12 d-flex flex-column mx-auto">
                 <h1 class="fs-2  fw-bold justify-content-center mx-auto">Nuestra Historia</h1>
-                <p class="fs-5 fst-italic mx-auto texto_historia">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae ab pariatur dolorum assumenda nulla repellendus 
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora repellat quod corrupti delectus! Nulla possimus perspi
-                    ciatis unde, totam excepturi quia numquam mollitia quam? Tempora vitae architecto nam delectus vel porro?  aut quasi esse itaque facere error cumque, corrupti, praesentium ex consequatur deserunt obcaecati iste!
-                </p>
+                <p class="fs-5 fst-italic mx-auto texto_historia">Somos una pymes familiar que trabaja y se dedica constantemente a la indumentaria 
+                  de niños, nuestro fin es tener la mejor calidad a un precio accesible a cualquier tipo de familia. </p>
                </div>
 
         </article>
@@ -69,19 +67,19 @@
             <div class="row">
               <div class="col-md-6 mx-auto">
                <h2 class="mx-auto fs-4">Los fundadores de indumentaria Los2Primos</h2>
-               <p class="fst-italic fs-6 mt-3 texto_historia">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas at delectus soluta molestiae ab! Nisi, ea!
-                 Saepe, veritatis! A, adipisci repudiandae enim ea non sapiente illum mollitia reiciendis veniam aut.</p>
+               <p class="fst-italic fs-6 mt-3 texto_historia">Alan y Sofia chichizola son los fundadores de indumentaria Los2primos.</p>
               </div>
               <div class="col-md-6 mt-2">
                 <img class="w-100 mx-auto rounded-4 mb-4 animate__animated animate__fadeInTopRight" src="../imagenes/fundadores.webp" alt="fundadores" width="300px" height="200px">
               </div> 
               <div class="col-md-6">
-                    <img class="w-100 mx-auto rounded-4 animate__animated animate__fadeInLeftBig" src="../imagenes/vendedores.webp" alt="fundadores" >
+                    <img class="w-100 mx-auto rounded-4 animate__animated animate__fadeInLeftBig" src="../imagenes/vendedores.webp" alt="vendedores" >
                   </div> 
               <div class="col-md-6 mx-auto">
                <h2 class="mx-auto fs-4">Nuestrxs vendedorxs</h2>
-               <p class="fst-italic fs-6 mt-3 texto_historia">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas at delectus soluta molestiae ab! Nisi, ea!
-                 Saepe, veritatis! A, adipisci repudiandae enim ea non sapiente illum mollitia reiciendis veniam aut.</p>
+               <p class="fst-italic fs-6 mt-3 texto_historia">Para nosotros es de su importancia que el cliente tenga un experencia de atencion y cuidado
+                para que nos vuelvan a elegir dia a dia, nuestros vendedorxs se capacitan constantemente en la atencion al cliente para asi poder
+                dar un atencion de excelencia.</p>
               </div>
         </section>
         <!---pie--->
