--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center" >
             <div class="card h-100 card--fondo" style="width: 300px;">
-                <img src="./imagenes/pantalon3.webp" class="card-img-top" alt="Ropa" >
+                <img src="./imagenes/pantalon3.webp" class="card-img-top" alt="jeans para niños" >
                 <div class="card-body">
                   <h5 class="card-title">pantalones para niños</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Los jeans mas cancheros y comodos, solamente en Los2Primos</p>
                   <a href="./pages/niños.html" class="btn btn-primary mt-0.2">ir</a>
                 </div>
               </div>
@@ -67,20 +67,20 @@
 
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center aligin-items-center">
             <div class="card h-100 card--fondo2" style="width: 300px; ">
-                <img src="./imagenes/remeragirld.jpg2.webp" class="card-img-top" alt="remera" >
+                <img src="./imagenes/remeragirld.jpg2.webp" class="card-img-top" alt="remera niñas" >
                 <div class="card-body">
                   <h5 class="card-title">remeras para nenas</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">encuentra todo la moda en remeras para niñas.</p>
                   <a href="./pages/niñas.html" class="btn btn-primary">ir</a>
                 </div>
               </div>
         </div>
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center">
             <div class="card h-100 card--fondo" style="width: 300px;">
-                <img src="./imagenes/camp4.webp" class="card-img-top" alt="camperas" >
+                <img src="./imagenes/camp4.webp" class="card-img-top" alt="camperas niños" >
                 <div class="card-body">
                   <h5 class="card-title">camperas para niños</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">los mejores abrigos para niños esta en Los2Primos, visita nuestro catalogo con un click</p>
                   <a href="./pages/niños.html" class="btn btn-primary">ir</a>
                 </div>
               </div>
@@ -93,30 +93,30 @@
             <div class="row   ">
                <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center">
                 <div class="card h-100 card--fondo2" style="width: 300px; ">
-                    <img src="./imagenes/campera_nena3.webp" class="card-img-top" alt="camperas" >
+                    <img src="./imagenes/campera_nena3.webp" class="card-img-top" alt="camperas niñas" >
                     <div class="card-body">
                       <h5 class="card-title">camperas para niñas</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Lo ultimo en moda para niñas</p>
                       <a href="./pages/niñas.html" class="btn btn-primary">ir</a>
                     </div>
                   </div>
                </div>
                <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center">
                 <div class="card h-100 card--fondo" style="width: 300px; ">
-                    <img src="./imagenes/boy4.jpg" class="card-img-top" alt="remeras" >
+                    <img src="./imagenes/boy4.jpg" class="card-img-top" alt="remeras niños" >
                     <div class="card-body">
                       <h5 class="card-title">remeras para niños</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Las remeras mas cancheras estan aqui</p>
                       <a href="./pages/niños.html" class="btn btn-primary">ir</a>
                     </div>
                   </div>
                </div>
                <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center">
                 <div class="card h-100 card--fondo2" style="width: 300px;">
-                    <img src="./imagenes/pantalon_nena1.webp" class="card-img-top" alt="pantalon" >
+                    <img src="./imagenes/pantalon_nena1.webp" class="card-img-top" alt="jeans para niñas" >
                     <div class="card-body">
                         <h5 class="card-title">pantalon para nenas</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Su elasticidad permite que puedan jugar y divertirse comodomante</p>
                         <a href="./pages/niñas.html" class="btn btn-primary justify-content-center">ir</a>
                     </div>
                   </div>
