--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -54,87 +54,38 @@
 <!---main--->
 <main>
        <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
-  <section class="conteiner d-flex flex-column justify-content-center aligin-items-center">
-    <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
-    <div class="row w-100 justify-content-center aligin-items-center mx-auto animate__animated animate__fadeInLeft">
-      <div class="w-50 xs sm md lg xl xxl">
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img src="../imagenes/campera_nena1.webp" class="d-block w-100" alt="ropaniñas" width="500px" height="250px">
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="../imagenes/campera_nena2.webp" class="d-block w-100" alt="ropaniñas" width="500px" height="250px">
-            </div>
-            <div class="carousel-item">
-              <img src="../imagenes/campera_nena3.webp" class="d-block w-100" alt="ropaniñas" width="500px" height="250px">
-            </div>
+       <section class="container d-flex flex-column justify-content-center aligin-items-center">
+        <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
+        <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+          <div class="col-4 mx-auto"><img src="../imagenes/campera_nena1.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <div class="col-4 mx-auto"><img src="../imagenes/campera_nena2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
+          </div>
+          <div class="col-4 mx-auto"><img src="../imagenes/campera_nena4.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
+          </div>
+        </section>
+          <section class="container d-flex flex-column justify-content-center aligin-items-center">
+            <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
+          <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg1.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
+            </div>
+            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
+            </div>
+            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg5.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
+            </div>
+        </section>
+        <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__fadeInRightBig">
+          <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
+          <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
+            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena1.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
         </div>
-      </div>
-    </section>
-      <section class="container d-flex flex-column justify-content-center aligin-items-center">
-        <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
-      <div class="row w-50 justify-content-center aligin-items-center mx-auto animate__animated animate__fadeInRight">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../imagenes/pantalon_nena1.webp" class="d-block w-100" alt="ropa" width="300px" height="200px">
+            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
             </div>
-            <div class="carousel-item">
-              <img src="../imagenes/pantalon_nena3.webp" class="d-block w-100" alt="ropa" width="300px" height="200px">
+            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena4.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
             </div>
-            <div class="carousel-item">
-              <img src="../imagenes/pantalon_nena4.webp" class="d-block w-100" alt="ropa" width="300px" height="200px">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
-      </div>
-    </section>
-    <section class="container d-flex flex-column justify-content-center aligin-items-center ">
-      <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
-      <div class="row w-50 justify-content-center aligin-items-center mx-auto animate__animated animate__fadeInUpBig">
-       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../imagenes/remeragirld.jpg1.webp" class="d-block w-100" alt="ropa" width="300px" height="200px">
-          </div>
-          <div class="carousel-item">
-            <img src="../imagenes/remeragirld.jpg2.webp" class="d-block w-100" alt="ropa" width="300px" height="200px">
-          </div>
-          <div class="carousel-item">
-            <img src="../imagenes/remeragirld.jpg5.webp" class="d-block w-100" alt="ropa" width="300px" height="200px">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      </div>
     </section>
   </main>
-    </main>
     <!---pie--->
     <footer>
       <i class="fa-brands fa-instagram"></i>
