cambios en seo en todas las pages

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!---titulo--->
     <title>Los2Primos - Contacto</title>
-    <meta name="description" content="ropa para chicos">
-    <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,contacto">
+    <meta name="description" content="contacto,promociones,registro,informacion">
+    <meta name="keywords" content="informacion,ropa,niños,niñas,moda,calidad,indumentaria,contacto">
     <link rel="stylesheet" href="../scss/estilos.css">
-    <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>  
 <link
  rel="stylesheet"
  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
