--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../scss/estilos.css">
    <!---titulo--->
  <title>Los2Primos - Niñas</title>
- <meta name="description" content="ropa para niñas">
-    <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria">
+ <meta name="description" content="ropa para niñas,niñas,moda,estilo,glamour">
+    <meta name="keywords" content="ropa,ropa para chicas,moda,remeras,polleras,camperas">
     <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
  <link
  rel="stylesheet"
@@ -67,21 +67,21 @@
           <section class="container d-flex flex-column justify-content-center aligin-items-center">
             <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
           <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg1.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
+            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg1.webp" class="rounded float-start" alt="remeras para niñas" width="350px" height="200px">
             </div>
-            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
+            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg2.webp" class="rounded mx-auto d-block" alt="remeras para niñas" width="350px" height="200px">
             </div>
-            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg5.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
+            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg5.webp" class="rounded float-end" alt="remeras para niñas" width="350px" height="200px">
             </div>
         </section>
         <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__fadeInRightBig">
           <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
           <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena1.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
+            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena1.webp" class="rounded float-start" alt="pantalon para niñas" width="350px" height="200px">
         </div>
-            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
+            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena2.webp" class="rounded mx-auto d-block" alt="pantalon para niñas" width="350px" height="200px">
             </div>
-            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena4.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
+            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena4.webp" class="rounded float-end" alt="pantalon para niñas" width="350px" height="200px">
             </div>
         </div>
     </section>
