--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,8 +9,8 @@
 
    <!---titulo--->
  <title>Los2Primos - Nosotros</title>
- <meta name="description" content="ropa para chicos">
- <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos">
+ <meta name="description" content="informacion, quienes somos?,acerca de nosotros,nuesta historia">
+ <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria,conocenos,creadores">
  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
 
  <link
@@ -73,7 +73,7 @@
                 <img class="w-100 mx-auto rounded-4 mb-4 animate__animated animate__fadeInTopRight" src="../imagenes/fundadores.webp" alt="fundadores" width="300px" height="200px">
               </div> 
               <div class="col-md-6">
-                    <img class="w-100 mx-auto rounded-4 animate__animated animate__fadeInLeftBig" src="../imagenes/vendedores.webp" alt="vendedores" >
+                    <img class="w-100 mx-auto rounded-4 animate__animated animate__fadeInLeftBig" src="../imagenes/vendedores.webp" alt="vendedores" width="300px" height="200px" >
                   </div> 
               <div class="col-md-6 mx-auto">
                <h2 class="mx-auto fs-4">Nuestrxs vendedorxs</h2>
