resposive pages niños y niñas

--- a/pages/niños.html
+++ b/pages/niños.html
@@ -55,31 +55,31 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   <section class="container d-flex flex-column justify-content-center aligin-items-center">
     <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
     <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-      <div class="col-4 mx-auto"><img src="../imagenes/camp.webp" class="rounded float-start" alt="campera para niños" width="350px" height="200px">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp.webp" class="rounded float-start" alt="campera para niños" width="350px" height="200px">
       </div>
-      <div class="col-4 mx-auto"><img src="../imagenes/camp4.webp" class="rounded mx-auto d-block" alt="campera para niños" width="350px" height="200px">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp4.webp" class="rounded mx-auto d-block" alt="campera para niños" width="350px" height="200px">
       </div>
-      <div class="col-4 mx-auto"><img src="../imagenes/camp3.webp" class="rounded float-end" alt="campera para niños" width="350px" height="200px">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp3.webp" class="rounded float-end" alt="campera para niños" width="350px" height="200px">
       </div>
     </section>
       <section class="container d-flex flex-column justify-content-center aligin-items-center">
         <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
       <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-        <div class="col-4 mx-auto"><img src="../imagenes/boy.jpg" class="rounded float-start" alt="remera para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy.jpg" class="rounded float-start" alt="remera para niños" width="350px" height="200px">
         </div>
-        <div class="col-4 mx-auto"><img src="../imagenes/boy2.webp" class="rounded mx-auto d-block" alt="remera para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy2.webp" class="rounded mx-auto d-block" alt="remera para niños" width="350px" height="200px">
         </div>
-        <div class="col-4 mx-auto"><img src="../imagenes/boy3.jpg" class="rounded float-end" alt="remera para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy3.jpg" class="rounded float-end" alt="remera para niños" width="350px" height="200px">
         </div>
     </section>
     <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__fadeInRightBig">
       <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
       <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-        <div class="col-4 mx-auto"><img src="../imagenes/pantalon.webp" class="rounded float-start" alt="pantalon para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon.webp" class="rounded float-start" alt="pantalon para niños" width="350px" height="200px">
     </div>
-        <div class="col-4 mx-auto"><img src="../imagenes/pantalon2.webp" class="rounded mx-auto d-block" alt="pantalon para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon2.webp" class="rounded mx-auto d-block" alt="pantalon para niños" width="350px" height="200px">
         </div>
-        <div class="col-4 mx-auto"><img src="../imagenes/pantalon4.webp" class="rounded float-end" alt="pantalon para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon4.webp" class="rounded float-end" alt="pantalon para niños" width="350px" height="200px">
         </div>
     </div>
     </section>
