--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -56,32 +56,32 @@
        <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
        <section class="container d-flex flex-column justify-content-center aligin-items-center">
         <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
-        <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-          <div class="col-4 mx-auto"><img src="../imagenes/campera_nena1.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
+        <div class="row  w-100  mx-auto animate__animated animate__fadeInLeft">
+          <div class=" mx-auto col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center"><img src="../imagenes/campera_nena1.webp" class="rounded float-start" alt="campera para niñas" width="350px" height="200px">
           </div>
-          <div class="col-4 mx-auto"><img src="../imagenes/campera_nena2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
+          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto "><img src="../imagenes/campera_nena2.webp" class="rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
           </div>
-          <div class="col-4 mx-auto"><img src="../imagenes/campera_nena4.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
+          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/campera_nena4.webp" class="rounded float-end" alt="campera para niñas" width="350px" height="200px">
           </div>
         </section>
           <section class="container d-flex flex-column justify-content-center aligin-items-center">
             <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
           <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg1.webp" class="rounded float-start" alt="remeras para niñas" width="350px" height="200px">
+            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/remeragirld.jpg1.webp" class=" img rounded float-start" alt="remeras para niñas" width="350px" height="200px">
             </div>
-            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg2.webp" class="rounded mx-auto d-block" alt="remeras para niñas" width="350px" height="200px">
+            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/remeragirld.jpg2.webp" class=" img rounded mx-auto d-block" alt="remeras para niñas" width="350px" height="200px">
             </div>
-            <div class="col-4 mx-auto"><img src="../imagenes/remeragirld.jpg5.webp" class="rounded float-end" alt="remeras para niñas" width="350px" height="200px">
+            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/remeragirld.jpg5.webp" class=" img rounded float-end" alt="remeras para niñas" width="350px" height="200px">
             </div>
         </section>
         <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__fadeInRightBig">
           <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
           <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena1.webp" class="rounded float-start" alt="pantalon para niñas" width="350px" height="200px">
+            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon_nena1.webp" class="rounded float-start" alt="pantalon para niñas" width="350px" height="200px">
         </div>
-            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena2.webp" class="rounded mx-auto d-block" alt="pantalon para niñas" width="350px" height="200px">
+            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon_nena2.webp" class="rounded mx-auto d-block" alt="pantalon para niñas" width="350px" height="200px">
             </div>
-            <div class="col-4 mx-auto"><img src="../imagenes/pantalon_nena4.webp" class="rounded float-end" alt="pantalon para niñas" width="350px" height="200px">
+            <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon_nena4.webp" class="rounded float-end" alt="pantalon para niñas" width="350px" height="200px">
             </div>
         </div>
     </section>
