final de correcciones

--- a/pages/niños.html
+++ b/pages/niños.html
@@ -55,39 +55,39 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   <section class="container d-flex flex-column justify-content-center aligin-items-center">
     <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
     <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp.webp" class="rounded float-start" alt="campera para niños" width="350px" height="200px">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp.webp" class="img_niñex rounded float-start" alt="campera para niños" width="350px" height="200px">
       </div>
-      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp4.webp" class="rounded mx-auto d-block" alt="campera para niños" width="350px" height="200px">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp4.webp" class=" img_niñex rounded mx-auto d-block" alt="campera para niños" width="350px" height="200px">
       </div>
-      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp3.webp" class="rounded float-end" alt="campera para niños" width="350px" height="200px">
+      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp3.webp" class=" img_niñex rounded float-end" alt="campera para niños" width="350px" height="200px">
       </div>
     </section>
       <section class="container d-flex flex-column justify-content-center aligin-items-center">
         <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
       <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy.jpg" class="rounded float-start" alt="remera para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy.jpg" class=" img_niñex rounded float-start" alt="remera para niños" width="350px" height="200px">
         </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy2.webp" class="rounded mx-auto d-block" alt="remera para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy2.webp" class= "img_niñex rounded mx-auto d-block" alt="remera para niños" width="350px" height="200px">
         </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy3.jpg" class="rounded float-end" alt="remera para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy3.jpg" class=" img_niñex rounded float-end" alt="remera para niños" width="350px" height="200px">
         </div>
     </section>
     <section class="container d-flex flex-column justify-content-center aligin-items-center animate__animated animate__fadeInRightBig">
       <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
       <div class="row w-100  mx-auto animate__animated animate__fadeInLeft">
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon.webp" class="rounded float-start" alt="pantalon para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon.webp" class=" img_niñex rounded float-start" alt="pantalon para niños" width="350px" height="200px">
     </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon2.webp" class="rounded mx-auto d-block" alt="pantalon para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon2.webp" class=" img_niñex rounded mx-auto d-block" alt="pantalon para niños" width="350px" height="200px">
         </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon4.webp" class="rounded float-end" alt="pantalon para niños" width="350px" height="200px">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon4.webp" class=" img_niñex rounded float-end" alt="pantalon para niños" width="350px" height="200px">
         </div>
     </div>
     </section>
     <!---pie--->
     <footer>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-whatsapp"></i>
+      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.facebook.com/campaign/landing.php?&campaign_id=1662524771&extra_1=s%7Cc%7C320628650062%7Ce%7Cfacebook%7C&placement=&creative=320628650062&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1662524771%26adgroupid%3D67039035794%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9041046%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=EAIaIQobChMInd2J64eT-gIVUhPUAR1hjgXoEAAYASAAEgKjDvD_BwE"><i class="fa-brands fa-facebook"></i></a>
+      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
    </footer>
 <!---script bootstrap--->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
