--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
     </main>
     <!---pie--->
 <footer>
-  <i class="fa-brands fa-instagram"></i>
-  <i class="fa-brands fa-facebook"></i>
-  <i class="fa-brands fa-whatsapp"></i>
+   <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+  <a href="https://www.facebook.com/campaign/landing.php?&campaign_id=1662524771&extra_1=s%7Cc%7C320628650062%7Ce%7Cfacebook%7C&placement=&creative=320628650062&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1662524771%26adgroupid%3D67039035794%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9041046%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=EAIaIQobChMInd2J64eT-gIVUhPUAR1hjgXoEAAYASAAEgKjDvD_BwE"><i class="fa-brands fa-facebook"></i></a>
+  <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
 </footer>
 <!---script bootstrap--->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
