--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -67,7 +67,10 @@
             <div class="row">
               <div class="col-md-6 mx-auto">
                <h2 class="mx-auto fs-4">Los fundadores de indumentaria Los2Primos</h2>
-               <p class="fst-italic fs-6 mt-3 texto_historia">Alan y Sofia chichizola son los fundadores de indumentaria Los2primos.</p>
+               <p class="fst-italic fs-6 mt-3 texto_historia">Los fundadores de indumentaria Los2Primos son 
+                Alan y Sofia chichizola, somos dos hermanos apasionados por la indumentaria infatil, nuestra inspiracion son nuestros
+                dos hijos, nuestra mision es que ellos/as se sientan libre a la hora de jugar,correr, entre otras cosas, por eso mismo ofrecemos
+                la mejor calidad y comidad para nuestros niños.</p>
               </div>
               <div class="col-md-6 mt-2">
                 <img class="w-100 mx-auto rounded-4 mb-4 animate__animated animate__fadeInTopRight" src="../imagenes/fundadores.webp" alt="fundadores" width="300px" height="200px">
@@ -84,9 +87,9 @@
         </section>
         <!---pie--->
         <footer>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-whatsapp"></i>
+          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.facebook.com/campaign/landing.php?&campaign_id=1662524771&extra_1=s%7Cc%7C320628650062%7Ce%7Cfacebook%7C&placement=&creative=320628650062&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1662524771%26adgroupid%3D67039035794%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9041046%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=EAIaIQobChMInd2J64eT-gIVUhPUAR1hjgXoEAAYASAAEgKjDvD_BwE"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
        </footer>
         <!---script bootstrap--->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
